sumo/tests/netconvert/errors/xml_false_nod/errors.netconvert
Error: File 'hokkaido.nod.xml' does not exist.
Error: On parsing edge '1':
 Either the name or the position of a node is not given.
Error: On parsing edge '2':
 Either the name or the position of a node is not given.
Error: On parsing edge '3':
 Either the name or the position of a node is not given.
Error: On parsing edge '4':
 Either the name or the position of a node is not given.
Error: No nodes loaded.
Quitting (on error).
